        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* The default <<service-name, `serviceName`>> string (when it is not configured
  and cannot be inferred from a "package.json" file) has been changed from
  "nodejs_service" to "unknown-nodejs-service". This is a standardized pattern
  used across Elastic APM agents to allow the Kibana APM app to recognize when
  to provide help to the user on configuring the service name.
  ({issues}2491[#2491])

* Add `transaction.name` to captured APM errors. This will allow the Kibana APM
  app to correlate error groups and transaction groups. ({issues}2456[#2456])

[float]
===== Bug fixes


[[release-notes-3.28.0]]
==== 3.27.0 2022/01/17

[float]
===== Features

* Add support for express-graphql 0.10.0 - 0.12.0 inclusive. ({pull}2511[#2511])

[float]
===== Bug fixes

* Fix an issue where the agent's async task tracking could cause the user's
  application to use too much memory. In cases where an application is under
  sustained load and is running in a memory constrained container, this looked
  like a memory leak.
+
This high memory usage could happen when application code starts async tasks
(e.g. Promises, setTimeouts, async I/O) that outlive the APM Transaction
(typically an HTTP request handler). The agent's async task tracking keeps a
reference to the APM Transaction (and any APM Spans) until the async task
ends, thus extending the lifetime of those APM objects and the references
they hold -- in particular, HTTP request and response objects. This could lead
to higher memory usage.
+
With this change, those references are removed when APM Transactions and Spans