@@ -43,6 +43,10 @@ class NoopTransport {
     }
   }
 
+  supportsKeepingUnsampledTransaction () {
+    return false // Default to the behavior for APM Server >=8.0.
+  }
+
   // Inherited from Writable, called in agent.js.
   destroy () {}
 }
